--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-/home/luz_arce/Documentos/SIMULACION/home/luz_arce/Documentos/SIMULACION/home/luz_arce/Documentos/SIMULACION
+Django==4.2.7
+gunicorn==21.2.0
+scikit-learn==1.3.2
+numpy==1.24.3
+pandas==2.1.3
+whitenoise==6.6.0
